kube/sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-client
  labels:
    app: go-client
spec:
  ports:
    - port: 9991
      name: http
  selector:
    app: go-client
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-client-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: go-client
        version: v1
    spec:
      containers:
        - name: go-client
          image: nori007/istio-test.go-client:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9991
---
apiVersion: v1
kind: Service
metadata:
  name: go-server-1
  labels:
    app: go-server-1
spec:
  ports:
    - port: 9992
      name: http
  selector:
    app: go-server-1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-server-1-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: go-server-1
        version: v1
    spec:
      containers:
        - name: go-server-1
          image: nori007/istio-test.go-server-1:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9992
---
apiVersion: v1
kind: Service
metadata:
  name: go-server-2
  labels:
    app: go-server-2
spec:
  ports:
    - port: 9993
      name: http
  selector:
    app: go-server-2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-server-2-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: go-server-2
        version: v1
    spec:
      containers:
        - name: go-server-2
          image: nori007/istio-test.go-server-2:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9993
---
