kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-test-project-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test-project
spec:
  hosts:
  - "*"
  gateways:
  - istio-test-project-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /auth
    - uri:
        prefix: /api
    route:
    - destination:
        host: go-client
        port:
          number: 9991
